--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 </nav>
 <section id="profile">
     <div class="section__pic-container">
-        <img src="./assets/profile-pic.png" alt="Lingga Ardyansyah"/>
+        <img src="./assets/foto-jas.png" alt="Lingga Ardyansyah"/>
     </div>
     <div class="section__text">
         <p class="section__text__p1">Hello, I'm</p>
         <h1 class="title">Lingga Shieva Ardyansyah</h1>
-        <p class="section__text__p2">Store Crew</p>
+        <p class="section__text__p2">Teach Learner</p>
         <div class="btn-container">
             <button
                     class="btn btn-color-2"
@@ -64,6 +64,24 @@
                     onclick="location.href='https://www.linkedin.com/in/lingga-shieva-ardyansyah-27b343217/'"
             />
             <img
+                    src="./assets/instagram.svg"
+                    alt="My Instagram profile"
+                    class="icon"
+                    onclick="location.href='https://www.instagram.com/lingga_ardyansyh/'"
+            />
+            <img
+                    src="./assets/x.svg"
+                    alt="My X (Twitter) profile"
+                    class="icon"
+                    onclick="location.href='https://x.com/linggaardyansyh'"
+            />
+            <img
+                    src="./assets/facebook.svg"
+                    alt="My Facebook profile"
+                    class="icon"
+                    onclick="location.href='https://www.facebook.com/lingz99'"
+            />
+            <img
                     src="./assets/github.png"
                     alt="My Github profile"
                     class="icon"
@@ -78,7 +96,7 @@
     <div class="section-container">
         <div class="section__pic-container">
             <img
-                    src="./assets/about-pic.png"
+                    src="./assets/foto-batik.png"
                     alt="Profile picture"
                     class="about-pic"
             />
@@ -101,15 +119,14 @@
                             class="icon"
                     />
                     <h3>Education</h3>
-                    <p>SMK Mutiara Bangsa (Teknik Komputer dan Jaringan)<br/>Universitas Terbuka(S1 Sistem Informasi) </p>
+                    <p>SMK Mutiara Bangsa (Teknik Komputer dan Jaringan)<br/>Universitas Terbuka(S1 Sistem Informasi)
+                    </p>
                 </div>
             </div>
             <div class="text-container">
                 <p>
-                    Saya memiliki pengalaman satu tahun sebagai store crew, yang membantu saya mengasah keterampilan
-                    melayani pelanggan dan manajemen operasional. Di sisi lain, saya juga seorang penggemar bahasa
-                    pemrograman dan terus belajar serta mengembangkan skill saya di bidang teknologi untuk menciptakan
-                    solusi yang inovatif.
+                    IT Enthusiast & Tech Learner yang fokus pada pengembangan skill pemrograman dan eksplorasi teknologi
+                    untuk membangun solusi yang inovatif.
                 </p>
             </div>
         </div>
@@ -127,7 +144,7 @@
     <div class="experience-details-container">
         <div class="about-containers">
             <div class="details-container">
-                <h2 class="experience-sub-title">Enthusiast Programmer</h2>
+                <h2 class="experience-sub-title">Front End</h2>
                 <div class="article-container">
                     <article>
                         <img
@@ -198,7 +215,7 @@
                 </div>
             </div>
             <div class="details-container">
-                <h2 class="experience-sub-title">Enthusiast Programmer</h2>
+                <h2 class="experience-sub-title">Back End</h2>
                 <div class="article-container">
                     <article>
                         <img
@@ -242,6 +259,28 @@
                         <div>
                             <h3>Git</h3>
                             <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img
+                                src="./assets/checkmark.png"
+                                alt="Experience icon"
+                                class="icon"
+                        />
+                        <div>
+                            <h3>Express JS</h3>
+                            <p>Basic</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img
+                                src="./assets/checkmark.png"
+                                alt="Experience icon"
+                                class="icon"
+                        />
+                        <div>
+                            <h3>REST API</h3>
+                            <p>Basic</p>
                         </div>
                     </article>
                 </div>
@@ -361,6 +400,30 @@
             />
             <p><a href="https://www.linkedin.com/in/lingga-shieva-ardyansyah-27b343217/">LinkedIn</a></p>
         </div>
+        <div class="contact-info-container">
+            <img
+                    src="./assets/instagram.svg"
+                    alt="Instagram icon"
+                    class="icon contact-icon"
+            />
+            <p><a href="https://www.instagram.com/lingga_ardyansyh/">Instagram</a></p>
+        </div>
+        <div class="contact-info-container">
+            <img
+                    src="./assets/x.svg"
+                    alt="X (Twitter) icon"
+                    class="icon contact-icon"
+            />
+            <p><a href="https://x.com/linggaardyansyh">X (Twitter)</a></p>
+        </div>
+        <div class="contact-info-container">
+            <img
+                    src="./assets/facebook.svg"
+                    alt="Facebook icon"
+                    class="icon contact-icon"
+            />
+            <p><a href="https://www.facebook.com/lingz99">Facebook</a></p>
+        </div>
     </div>
 </section>
 <footer>
@@ -374,7 +437,7 @@
             </ul>
         </div>
     </nav>
-    <p>Copyright &#169; 2024 Lingga Ardyansyah. All Rights Reserved.</p>
+    <p>Copyright &#169; 2026 Lingga Ardyansyah. All Rights Reserved.</p>
 </footer>
 <script src="script.js"></script>
 </body>
