improve mobile layout, update portfolio project details, and add README

--- a/index.html
+++ b/index.html
@@ -46,12 +46,7 @@
         <h1 class="title">Lingga Shieva Ardyansyah</h1>
         <p class="section__text__p2">Tech Learner</p>
         <div class="btn-container">
-            <button
-                    class="btn btn-color-2"
-                    onclick="window.open('./assets/resume-example.pdf')"
-            >
-                Download CV
-            </button>
+            <!-- Tombol CV disembunyikan sementara karena file CV final belum tersedia. -->
             <button class="btn btn-color-1" onclick="location.href='./#contact'">
                 Contact Info
             </button>
@@ -303,21 +298,40 @@
                 <div class="article-container">
                     <img
                             src="./assets/project-1.png"
-                            alt="Project 1"
+                            alt="OpsFlow Service Desk"
                             class="project-img"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project One</h2>
+                <h2 class="experience-sub-title project-title">OpsFlow Service Desk</h2>
+                <p class="project-summary">
+                    Web aplikasi ticketing internal untuk tim operasional dalam menangani issue lintas divisi.
+                    Sistem ini membantu pencatatan, prioritisasi, dan monitoring SLA agar proses support lebih terukur.
+                    Dashboard ringkas memudahkan lead memantau beban kerja harian.
+                </p>
+                <div class="project-meta">
+                    <p><strong>Type:</strong> Case Study</p>
+                    <p><strong>Role:</strong> Full-Stack Developer</p>
+                    <p><strong>Tech Stack:</strong> React, Node.js, Express, MySQL, JWT</p>
+                    <p><strong>Status:</strong> In Progress</p>
+                </div>
+                <p class="project-label"><strong>Key Features:</strong></p>
+                <ul class="project-feature-list">
+                    <li>Role-based access (Agent, Supervisor, Admin).</li>
+                    <li>Ticket lifecycle tracking dengan status dan prioritas.</li>
+                    <li>SLA timer dan notifikasi untuk ticket overdue.</li>
+                    <li>Dashboard performa ticket per tim dan periode.</li>
+                </ul>
+                <p class="project-future"><strong>Future Improvement:</strong> Menambahkan auto-assignment berbasis kategori issue, audit log aktivitas, dan ekspor laporan bulanan ke format CSV/PDF.</p>
                 <div class="btn-container">
                     <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/Aeriss99'"
                     >
                         Github
                     </button>
                     <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://lingz99.my.id'"
                     >
                         Live Demo
                     </button>
@@ -327,21 +341,40 @@
                 <div class="article-container">
                     <img
                             src="./assets/project-2.png"
-                            alt="Project 2"
+                            alt="StockPoint Inventory"
                             class="project-img"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Two</h2>
+                <h2 class="experience-sub-title project-title">StockPoint Inventory</h2>
+                <p class="project-summary">
+                    Aplikasi inventori untuk bisnis retail skala kecil hingga menengah dengan fokus akurasi stok.
+                    Pengguna dapat mencatat barang masuk-keluar, memantau pergerakan stok, dan melihat ringkasan nilai inventori.
+                    Proyek ini dirancang sebagai simulasi kebutuhan client UMKM.
+                </p>
+                <div class="project-meta">
+                    <p><strong>Type:</strong> Personal</p>
+                    <p><strong>Role:</strong> Front-End Developer</p>
+                    <p><strong>Tech Stack:</strong> React, Tailwind CSS, Axios, Chart.js</p>
+                    <p><strong>Status:</strong> Completed</p>
+                </div>
+                <p class="project-label"><strong>Key Features:</strong></p>
+                <ul class="project-feature-list">
+                    <li>Manajemen katalog produk dengan kategori dan SKU.</li>
+                    <li>Pencatatan transaksi stok masuk dan stok keluar.</li>
+                    <li>Alert stok minimum untuk item kritis.</li>
+                    <li>Visualisasi tren stok menggunakan grafik mingguan.</li>
+                </ul>
+                <p class="project-future"><strong>Future Improvement:</strong> Integrasi barcode scanner, sinkronisasi multi-cabang, dan histori harga beli untuk analisis margin.</p>
                 <div class="btn-container">
                     <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/Aeriss99'"
                     >
                         Github
                     </button>
                     <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://lingz99.my.id'"
                     >
                         Live Demo
                     </button>
@@ -351,21 +384,40 @@
                 <div class="article-container">
                     <img
                             src="./assets/project-3.png"
-                            alt="Project 3"
+                            alt="TalentBridge Hiring Portal"
                             class="project-img"
                     />
                 </div>
-                <h2 class="experience-sub-title project-title">Project Three</h2>
+                <h2 class="experience-sub-title project-title">TalentBridge Hiring Portal</h2>
+                <p class="project-summary">
+                    Platform rekrutmen sederhana untuk membantu HR mempublikasikan lowongan dan memproses kandidat.
+                    Candidate flow dibuat jelas mulai dari apply, screening, hingga interview shortlist.
+                    Proyek ini fokus pada pengalaman pengguna dan struktur data yang mudah dikembangkan.
+                </p>
+                <div class="project-meta">
+                    <p><strong>Type:</strong> Concept</p>
+                    <p><strong>Role:</strong> Back-End Developer</p>
+                    <p><strong>Tech Stack:</strong> Node.js, Express, MySQL, REST API, Postman</p>
+                    <p><strong>Status:</strong> Prototype</p>
+                </div>
+                <p class="project-label"><strong>Key Features:</strong></p>
+                <ul class="project-feature-list">
+                    <li>Manajemen lowongan kerja dan detail kualifikasi.</li>
+                    <li>Endpoint lamaran kandidat dengan validasi data dasar.</li>
+                    <li>Tahapan seleksi kandidat (applied, screening, interview).</li>
+                    <li>Filter kandidat berdasarkan status dan posisi.</li>
+                </ul>
+                <p class="project-future"><strong>Future Improvement:</strong> Menambahkan authentication untuk recruiter, upload CV terstruktur, serta integrasi email notifikasi status lamaran.</p>
                 <div class="btn-container">
                     <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://github.com/Aeriss99'"
                     >
                         Github
                     </button>
                     <button
                             class="btn btn-color-2 project-btn"
-                            onclick="location.href='https://github.com/'"
+                            onclick="location.href='https://lingz99.my.id'"
                     >
                         Live Demo
                     </button>
